<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Privacy Info</string>
    <string name="no_permissions">No Permissions</string>
    <string name="read_phone_state">Read Phone State</string>
    <string name="access_network_state">Access Network State</string>
    <string name="access_coarse_location">Access Coarse Location</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unavailable">Unavailable</string>
    <string name="unknown_sim_not_ready">Unknown - SIM not ready</string>
    <string name="list_call_state">Call State: %s</string>
    <string name="list_data_activity">Data Activity: %s</string>
    <string name="list_data_state">Data State: %s</string>
    <string name="list_network_country_iso">Network Country ISO: %s</string>
    <string name="list_network_operator">Network Operator: %s</string>
    <string name="list_network_operator_name">Network Operator Name: %s</string>
    <string name="list_network_type">Network Type: %s</string>
    <string name="list_network_subtype">Network Sub-type: %s</string>
    <string name="list_phone_type">Phone Type: %s</string>
    <string name="list_sim_country_iso">SIM Country ISO: %s</string>
    <string name="list_sim_operator">SIM Operator: %s</string>
    <string name="list_sim_operator_name">SIM Operator Name: %s</string>
    <string name="list_sim_state">SIM State: %s</string>
    <string name="list_has_icc_card">Has ICC Card: %s</string>
    <string name="list_is_network_roaming">Is Network Roaming: %s</string>
    <string name="list_memory_class">Memory Class: %sMB</string>
    <string name="list_line1_number">Line 1 Number: %s</string>
    <string name="list_device_id">Device ID: %s</string>
    <string name="list_device_software_version">Device Software Version: %s</string>
    <string name="list_sim_serial_number">SIM Serial Number: %s</string>
    <string name="list_subscriber_id">Subscriber ID: %s</string>
    <string name="list_voicemail_alpha_tag">Voicemail Alpha Tag: %s</string>
    <string name="list_voicemail_number">Voicemail Number: %s</string>
    <string name="list_cell_location">Cell Location: %s</string>
    <string name="list_cell_id">Cell ID: %s</string>
    <string name="list_cell_area_code">Cell Area Code: %s</string>
    <string name="tm_DATA_ACTIVITY_DORMANT">Dormant</string>
    <string name="tm_DATA_ACTIVITY_IN">In</string>
    <string name="tm_DATA_ACTIVITY_INOUT">In/out</string>
    <string name="tm_DATA_ACTIVITY_NONE">None</string>
    <string name="tm_DATA_ACTIVITY_OUT">Out</string>
    <string name="tm_DATA_DISCONNECTED">Disconnected</string>
    <string name="tm_DATA_CONNECTED">Connected</string>
    <string name="tm_DATA_CONNECTING">Connecting</string>
    <string name="tm_DATA_SUSPENDED">Suspended</string>
    <string name="tm_NETWORK_TYPE_1xRTT">1xRTT</string>
    <string name="tm_NETWORK_TYPE_CDMA">CDMA</string>
    <string name="tm_NETWORK_TYPE_EDGE">EDGE</string>
    <string name="tm_NETWORK_TYPE_EHRPD">EHRPD</string>
    <string name="tm_NETWORK_TYPE_EVDO_0">EVDO Rev.0</string>
    <string name="tm_NETWORK_TYPE_EVDO_A">EVDO Rev.A</string>
    <string name="tm_NETWORK_TYPE_EVDO_B">EVDO Rev.B</string>
    <string name="tm_NETWORK_TYPE_GPRS">GPRS</string>
    <string name="tm_NETWORK_TYPE_HSDPA">HSDPA</string>
    <string name="tm_NETWORK_TYPE_HSPA">HSPA</string>
    <string name="tm_NETWORK_TYPE_HSPAP">HSPAP</string>
    <string name="tm_NETWORK_TYPE_HSUPA">HSUPA</string>
    <string name="tm_NETWORK_TYPE_IDEN">iDen</string>
    <string name="tm_NETWORK_TYPE_LTE">LTE</string>
    <string name="tm_NETWORK_TYPE_UMTS">UMTS</string>
    <string name="tm_NETWORK_TYPE_UNKNOWN">Unknown</string>
    <string name="tm_PHONE_TYPE_CDMA">CDMA</string>
    <string name="tm_PHONE_TYPE_GSM">GSM</string>
    <string name="tm_PHONE_TYPE_NONE">None</string>
    <string name="tm_SIM_STATE_ABSENT">Absent</string>
    <string name="tm_SIM_STATE_NETWORK_LOCKED">Network locked</string>
    <string name="tm_SIM_STATE_PIN_REQUIRED">PIN required</string>
    <string name="tm_SIM_STATE_PUK_REQUIRED">PUK required</string>
    <string name="tm_SIM_STATE_READY">Ready</string>
    <string name="tm_SIM_STATE_UNKNOWN">Unknown</string>
</resources>
