<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/scroll" android:layout_width="fill_parent" android:layout_height="wrap_content">
	<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:id="@+id/cell_location" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/list_cell_location"/>
		<TextView android:id="@+id/cell_id" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/list_cell_id"/>
		<TextView android:id="@+id/cell_area_code" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/list_cell_area_code"/>
	</LinearLayout>
</ScrollView>