<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android" android:id="@android:id/tabhost" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
		<TabWidget android:id="@android:id/tabs" android:layout_width="fill_parent" android:layout_height="wrap_content" />
		<FrameLayout android:id="@android:id/tabcontent" android:layout_width="fill_parent" android:layout_height="fill_parent">
			<LinearLayout android:id="@+id/tab_permissions" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
				<Button android:id="@+id/button_no_perms" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_permissions"/>
				<Button android:id="@+id/button_read_phone_state" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/read_phone_state"/>
				<Button android:id="@+id/button_access_network_state" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/access_network_state"/>
				<Button android:id="@+id/button_access_coarse_location" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/access_coarse_location"/>
			</LinearLayout>
		</FrameLayout>
	</LinearLayout>
</TabHost>
